# MediaViewer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
CMake/: Setup.cmake
Sources/: Main.cpp  MediaViewerPCH.h  RegisterQMLTypes.cpp
Sources/Application/: Application.qrc  FolderBrowser.qml  FramelessWindow.qml  Main.qml  MainMenu.qml  MediaBrowser.qml  MediaViewer.qml  Preferences.qml  Selection.qml
Sources/Application/Viewers/: Animated.qml  Image.qml  Movie.qml  MovieControls.qml
Sources/ImageProviders/: FolderIconProvider.cpp  FolderIconProvider.h  ImageResponse.cpp  ImageResponse.h  MediaPreviewProvider.cpp  MediaPreviewProvider.h
Sources/Models/: Folder.cpp  Folder.h  Folder.inl  FolderModel.cpp  FolderModel.h  FolderModel.inl  Media.cpp  Media.h  Media.inl  MediaModel.cpp  MediaModel.h  MediaModel.inl
Sources/Utils/: Cursor.cpp  Cursor.h  FileSystem.cpp  FileSystem.h  Job.cpp  Job.h
